# ml_electronic_friction

./: .gitignore  CMakeLists.txt
build-test/: CMakeCache.txt  Makefile  cmake_install.cmake
build-test/source/: Makefile  cmake_install.cmake
build-test/source/utils/: Makefile  cmake_install.cmake
config/: settings.yaml
results/gamma_0.01eV_temp_300K/omega_0.03eV/elvib_coup_0.1eV/trajectories/: .nfs000000001082066000000b60
scripts/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  main_harmonic.cpp  main_sh.cpp
source/config/: CMakeLists.txt
source/config/include/config/: config.h  qu_ops.h
source/config/src/: config.cpp  qu_ops.cpp
source/io/: CMakeLists.txt
source/io/include/io/: io_utils.h  obs_io.h  results_layout.h  traj_io.h
source/io/src/: io_utils.cpp  obs_io.cpp  results_layout.cpp  traj_io.cpp
source/postproc/: CMakeLists.txt
source/postproc/include/postproc/: postproc_main.h  postproc_utils.h
source/postproc/src/: postproc_main.cpp  postproc_utils.cpp
source/sh_prop/: CMakeLists.txt
source/sh_prop/include/sh_prop/: cl_forces.h  init_conds.h  quantum_me.h  sh_utils.h  traj_prop.h  traj_workers.h
source/sh_prop/src/: cl_forces.cpp  init_conds.cpp  quantum_me.cpp  sh_utils.cpp  traj_prop.cpp  traj_workers.cpp
source/utils/: CMakeLists.txt  hello  hello.cpp  math_utils.cpp  readwrite_traj.cpp
source/utils/include/utils/: math_utils.h  readwrite_traj.h  run_mode.h  typing.h
source/utils/src/: math_utils.cpp  readwrite_traj.cpp
testing/: CMakeLists.txt  test_init_conds.cpp
testing/config/: settings_test.yaml
